@startuml
skinparam shadowing false

interface ConfigurationListener {
    +configure()
}

interface ConfigurationService {
    +getConfiguration()
    +registerListener()
    +unregisterListener()
}

interface ConsumerService {
    +subscribe()
    +unsubscribe()
}

class KafkaConfigurationService {
    -ConsumerService consumerService
    -Map listeners
    -Map actualConfigs
    +getConfiguration()
    +registerListener()
    +unregisterListener()
    -listen()
}

ConfigurationService o--left- ConfigurationListener
KafkaConfigurationService -up..|> ConfigurationService
KafkaConfigurationService *--left- ConsumerService


'abstract AbstractConsumerService
'AbstractConsumerService -up..|> ConfigurationListener
'KafkaProducerService -up..|> ConfigurationListener

@enduml